--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,41 @@
 			<scope>test</scope>
 		</dependency>
 
+		<!-- SOPORTE WEBSOCKETS -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-websocket</artifactId>
+		</dependency>
+		<!-- Para el front -->
+		<dependency>
+			<groupId>org.webjars</groupId>
+			<artifactId>webjars-locator</artifactId>
+			<version>0.28</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.webjars</groupId>
+			<artifactId>jquery</artifactId>
+			<version>3.5.1</version>
+		</dependency>
+		<dependency>
+			<groupId>org.webjars</groupId>
+			<artifactId>sockjs-client</artifactId>
+			<version>1.0.2</version>
+		</dependency>
+		<dependency>
+			<groupId>org.webjars</groupId>
+			<artifactId>stomp-websocket</artifactId>
+			<version>2.3.3</version>
+		</dependency>
+		<dependency>
+			<groupId>org.webjars</groupId>
+			<artifactId>bootstrap</artifactId>
+			<version>3.3.7</version>
+		</dependency>
+		<!-- Para el front -->
+		<!-- SOPORTE WEBSOCKETS -->
+
 		<!-- SOPORTE ARCHIVOS JSP -->
 		<dependency>
 			<groupId>org.apache.tomcat.embed</groupId>
@@ -91,7 +126,6 @@
 		<dependency>
 			<groupId>org.xerial</groupId>
 			<artifactId>sqlite-jdbc</artifactId>
-			<version>3.30.1</version>
 		</dependency>
 		<!-- SQLITE - SUPPORT # -->
 
